# win_webview_php

./: README.md
WinWebviewDll/: CMakeLists.txt  package.json
WinWebviewDll/src/: logtool.h  main.cpp  openWebview2.h  tools.h
WinWebviewPhp/: package.json  php-local.ini
WinWebviewPhp/src/: koffi.php
